[gd_scene load_steps=4 format=3 uid="uid://ds65wndyc5uec"]

[ext_resource type="LabelSettings" uid="uid://blwfyfh1cimt5" path="res://labelSettings.tres" id="1_04myf"]
[ext_resource type="Script" path="res://scenes/hud.gd" id="1_jnj7x"]

[sub_resource type="LabelSettings" id="LabelSettings_xh228"]
font_size = 32
font_color = Color(1, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jnj7x")

[node name="Label" type="Label" parent="."]
offset_left = 432.0
offset_top = 80.0
offset_right = 619.0
offset_bottom = 171.0
text = "Time: 0"
label_settings = ExtResource("1_04myf")

[node name="GameOver" type="Label" parent="."]
offset_left = 368.0
offset_top = 158.0
offset_right = 735.0
offset_bottom = 249.0
text = "GAME OVER"
label_settings = ExtResource("1_04myf")

[node name="Restart" type="Button" parent="."]
z_index = 25
offset_left = 432.0
offset_top = 389.0
offset_right = 707.0
offset_bottom = 485.0
theme_override_font_sizes/font_size = 64
text = "RESTART"

[node name="QUIT" type="Button" parent="."]
offset_left = 488.0
offset_top = 496.0
offset_right = 650.0
offset_bottom = 592.0
theme_override_font_sizes/font_size = 64
text = "QUIT"

[node name="Resume" type="Button" parent="."]
offset_left = 440.0
offset_top = 280.0
offset_right = 703.0
offset_bottom = 376.0
theme_override_font_sizes/font_size = 64
text = "RESUME"

[node name="Modes" type="Label" parent="."]
offset_top = -18.0
offset_right = 245.0
offset_bottom = 73.0
text = "MODES:"
label_settings = ExtResource("1_04myf")

[node name="Baby" type="Button" parent="Modes"]
layout_mode = 0
offset_left = 16.0
offset_top = 120.0
offset_right = 164.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 24
text = "BABY MODE"

[node name="Nightmare" type="Button" parent="Modes"]
layout_mode = 0
offset_left = 16.0
offset_top = 166.0
offset_right = 243.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 24
text = "NIGHTMARE MODE"

[node name="Normal" type="Button" parent="Modes"]
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 206.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 24
text = "NORMAL MODE"

[node name="CurrentMode" type="Label" parent="."]
offset_left = 720.0
offset_top = 592.0
offset_right = 1188.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 32
text = "Current Mode: Normal"
label_settings = SubResource("LabelSettings_xh228")

[connection signal="button_down" from="Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="QUIT" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Modes/Baby" to="." method="_on_baby_button_down"]
[connection signal="button_down" from="Modes/Nightmare" to="." method="_on_nightmare_button_down"]
[connection signal="button_down" from="Modes/Normal" to="." method="_on_normal_button_down"]
